<resources>
    <string name="app_name">Time Subtractor</string>
    <string name="start_text">Start Time:</string>
    <string name="end_text">End Time:</string>
    <string name="date_text">Date:</string>
    <string name="time_text">Time:</string>
    <string name="calculate">Calculate</string>
    <string name="switch_time">↕ Switch ↕</string>
    <string name="save_time">Save</string>
    <string name="recall_time">Recall</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_time">Pick Time</string>
    <string name="beginning_switch">Beginning</string>
    <string name="end_switch">End</string>
    <string name="default_time">00:00</string>
    <string name="default_diff">0 days, 0 hrs, 0 mins</string>
    <string name="default_date">01JAN2000</string>
    <string name="difference">Difference:</string>
    <string name="credit">Made by Michael Wdowiak</string>
    <string name="add">Add</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="reset">Reset</string>
</resources>